fix(http.client): redefine-dispatch bug + JDK21 real-mode gaps
Root cause behind the http.client bug cluster's Mockito failures: two of
the interpreter's three "does a native shadow this call" checks only
looked at the RECEIVER's JVMTI redefine-generation, never walking the
ancestor chain. Mockito's inline mock maker mocks a concrete class (e.g.
java.net.HttpURLConnection) by redefining that class directly and
instantiating a marker subclass that doesn't itself override every
mockable method -- so the receiver is never redefined, only an ancestor
is, and calls silently bypassed the mock's advice to run CratonVM's real
HttpURLConnection native instead (surfacing as "HttpURLConnection: URL
not set" from inside given()/verify() calls). Fixed in both
populate_virtual_invoke_cache and try_stackless_invoke's ancestor walks;
verified behavior-identical on a 20-class spring-web sample with the fix
reverted (the guards are inert unless a class was actually redefined).

Also fixes several JDK 21 real-mode native gaps that blocked every one of
the 12 target classes before a single test could run: missing
PreviewFeatures.isPreviewEnabled, a JavaLangAccess.defineClass bridge that
ran real bytecode instead of the registered native (tripping the real
ClassLoader.checkName on an internal-form name), an overly broad
prohibited-package guard blocking jdk.internal.reflect's own
ClassDefiner, missing JavaLangAccess.getConstantPool/start, and a missing
JDK 21 StackWalker.callStackWalk overload.

JettyClientHttpRequestFactoryTests and SimpleClientHttpResponseTests go
from ABEND to 5/6 and 4/5 respectively; Reactor/reactive classes partially
unblocked. Residuals (Linux-only NIO gaps, a 4-class hang, one
order-dependent Mockito state leak, pre-existing SimpleClientHttpRequestFactoryTests
gaps) documented in docs/known-issues/http-client-cluster-redefine-dispatch-and-jdk21-gaps.md.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>